refactor: only get the list of active listings for a developer once
OCD-4153